# openclassroom

./: .gitignore  404.html  Cargo.toml  LICENCE  README.md  app.py  generalNavBar.html  index.html  privacy.html  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
1licence/: DBAD - Clean.txt
1mainResources/: mainMenuItems.js  noJSmenu.html
general/: generalNavBar.html  generalNavBar.js  index.html  me.html  pc.html
general/1resources/: generalMenuBar.css  main.css
rethinkdb_data/: log_file
static/1resources/: generalMenuBar.css  main.css
stuff/1mainResources/: mainMenu.css
stuff/1resources/: mobileMenu.js
templates/: 404.html  PostAssignment.html  STUFF.html  dash.html  generalNavBar.html  notifs.html  setup.html
templates/1licence/: DBAD - Clean.txt
templates/1resources/: main.css
